feat: implement full dish management feature with context, creation form, and list display. - Created DishContext with global state management for dishes (dishList, createNewDish) - Added persistence with localStorage to store and load dish data
- Added CreateDish component with Formik form for adding new dishes
  • Includes Joi validation for name and price fields
  • On successful submit, adds dish via context and navigates back home
  • Automatically syncs dish list with localStorage

- Added Dishes component to display all dishes retrieved from context
  • Uses conditional rendering to handle empty list
  • Integrates navigation hook for redirecting to CreateDish

- Added DishList component to render individual dish details (name, price, id)
  • Includes a “Delete Dish” button (logic pending integration)

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "formik": "^2.4.6",
     "git": "^0.1.5",
+    "joi": "^18.0.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5"
